# snu

./: .gitignore  pyproject.toml  readme.md
.github/workflows/: python.yaml
docs/network/: network.md
examples/images/: udp_client.py  udp_server.py
snu/: __init__.py  messages.py  snu.py  utils.py
tests/: test_msgs.py
